# Phenotype_Predictor

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  benchmark.md  build_snp_db.py  check_chrom_sizes.py  download_opensnp.py  fix_model_cards.py  full_snp_db.txt  probe_igsr.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  run_phase1_pipeline.py  train_age_full.py  train_age_real.py  train_ancestry_real.py  train_pigmentation.py  train_sparse_ancestry.py
backend/: phenotype.db  requirements.txt
backend/app/: main.py
data/: README.md  full_snp_db.txt
docs/: api.md  architecture.md  data_sources.md  ethics.md  limitations.md  project_story.md
frontend/: package-lock.json
outputs/: age_features.txt  ancestry_features.txt
outputs/age_models/: random_forest.joblib  random_forest_model_card.md  ridge_model_card.md  ridge_v1.0.joblib  svr_model_card.md
outputs/ancestry_models/: logistic_regression_model_card.md  logistic_regression_v1.0.joblib  random_forest_model_card.md  sparse_features.txt
outputs/phase1/: comparison_report.json
outputs/smoke/: hirisplex_s_markers.csv  synthetic_age.csv  synthetic_ancestry.csv  synthetic_multitask.csv
scripts/: benchmark_latency.py
scripts/data_prep/: download_hirisplex_1kg.py  fetch_hirisplex_ensembl.py  format_hirisplex_webtool.py  parse_hirisplex_results.py
src/phenotype_predictor/: cli.py  config.py  data_io.py  explainability.py  predictor.py  reporting.py
tests/: scratch_test.py  test_inference.py
tests/sample_blue_eye/: README.md
(+62 files in other folders)
