[project]
name = "phenotype-predictor"
version = "0.1.0"
description = "Population-aware multi-model phenotype prediction framework"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "joblib",
  "sqlalchemy",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
